Reformatting entire project to meet standards (#948)